--- a/Cutec.Blazor.WebAPIs/Cutec.Blazor.WebAPIs.csproj
+++ b/Cutec.Blazor.WebAPIs/Cutec.Blazor.WebAPIs.csproj
@@ -4,13 +4,19 @@
     <TargetFramework>net5.0</TargetFramework>
 	<TypeScriptCompileBlocked>true</TypeScriptCompileBlocked>
 	<PackageProjectUrl>https://github.com/Bob-HL/Blazor.WebAPIs</PackageProjectUrl>
-	<PackageTags>Blazor IndexedDB localStorage</PackageTags>
+	<PackageTags>Blazor IndexedDB localStorage Geolocation</PackageTags>
 	<PackageLicenseFile></PackageLicenseFile>
 	<PackageLicenseExpression>MIT</PackageLicenseExpression>
 	<Authors>Bob Lan</Authors>
 	<RepositoryUrl>https://github.com/Bob-HL/Blazor.WebAPIs</RepositoryUrl>
-	<Version>1.0.1</Version>
+	<Version>1.1.0</Version>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Remove="package-lock.json" />
+    <Content Remove="package.json" />
+    <Content Remove="tsconfig.json" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
@@ -18,7 +24,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\" />
+    <None Include="package-lock.json" />
+    <None Include="package.json" />
+    <None Include="tsconfig.json" />
   </ItemGroup>
 
 </Project>
