--- a/Cutec.Blazor.WebAPIs/package.json
+++ b/Cutec.Blazor.WebAPIs/package.json
@@ -9,12 +9,12 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "typescript": "^4.3.2"
+    "typescript": "^4.3.2",
+    "webpack": "^5.67.0"
   },
   "dependencies": {
     "idb": "^6.1.2",
     "ts-loader": "^9.2.3",
-    "webpack": "^5.38.1",
     "webpack-cli": "^4.7.2"
   }
 }
