--- a/Cutec.Blazor.WebAPIs/Cutec.Blazor.WebAPIs.csproj
+++ b/Cutec.Blazor.WebAPIs/Cutec.Blazor.WebAPIs.csproj
@@ -9,7 +9,8 @@
 	<PackageLicenseExpression>MIT</PackageLicenseExpression>
 	<Authors>Bob Lan</Authors>
 	<RepositoryUrl>https://github.com/Bob-HL/Blazor.WebAPIs</RepositoryUrl>
-	<Version>1.3.2</Version>
+	<Version>1.3.3</Version>
+	<PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
 
   <ItemGroup>
@@ -20,10 +21,14 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
-    <PackageReference Include="Microsoft.JSInterop" Version="6.0.1" />
+    <PackageReference Include="Microsoft.JSInterop" Version="6.0.9" />
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
     <None Include="package-lock.json" />
     <None Include="package.json" />
     <None Include="tsconfig.json" />
