--- a/Cutec.Blazor.WebAPIs/Cutec.Blazor.WebAPIs.csproj
+++ b/Cutec.Blazor.WebAPIs/Cutec.Blazor.WebAPIs.csproj
@@ -1,29 +1,22 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
-
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-	<TypeScriptCompileBlocked>true</TypeScriptCompileBlocked>
-	<PackageProjectUrl>https://github.com/Bob-HL/Blazor.WebAPIs</PackageProjectUrl>
-	<PackageTags>Blazor IndexedDB localStorage Geolocation</PackageTags>
-	<PackageLicenseFile></PackageLicenseFile>
-	<PackageLicenseExpression>MIT</PackageLicenseExpression>
-	<Authors>Bob Lan</Authors>
-	<RepositoryUrl>https://github.com/Bob-HL/Blazor.WebAPIs</RepositoryUrl>
-	<Version>1.3.3</Version>
-	<PackageReadmeFile>README.md</PackageReadmeFile>
+    <TargetFramework>net8.0</TargetFramework>
+    <TypeScriptCompileBlocked>true</TypeScriptCompileBlocked>
+    <PackageProjectUrl>https://github.com/Bob-HL/Blazor.WebAPIs</PackageProjectUrl>
+    <PackageTags>Blazor IndexedDB localStorage Geolocation</PackageTags>
+    <PackageLicenseFile>
+    </PackageLicenseFile>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <Authors>Bob Lan</Authors>
+    <RepositoryUrl>https://github.com/Bob-HL/Blazor.WebAPIs</RepositoryUrl>
+    <Version>2.0.0</Version>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
-
   <ItemGroup>
     <Content Remove="package-lock.json" />
     <Content Remove="package.json" />
     <Content Remove="tsconfig.json" />
   </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
-    <PackageReference Include="Microsoft.JSInterop" Version="6.0.9" />
-  </ItemGroup>
-
   <ItemGroup>
     <None Include="..\README.md">
       <Pack>True</Pack>
@@ -33,5 +26,8 @@
     <None Include="package.json" />
     <None Include="tsconfig.json" />
   </ItemGroup>
-
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
+    <PackageReference Include="Microsoft.JSInterop" Version="8.0.7" />
+  </ItemGroup>
 </Project>
